--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         .hero-section {
             position: relative;
-            background: url('../html/images/main.jpg') no-repeat center center;
+            background: url('images/main.jpg') no-repeat center center;
             background-size: cover;
             height: 60vh;
             display: flex;
@@ -324,7 +324,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="card service-card">
-                        <img src="../html/images/service1.jpg" class="card-img-top" alt="Service 1">
+                        <img src="images/service1.jpg" class="card-img-top" alt="Service 1">
                         <div class="card-body">
                            <b> <h3 class="card-title">Bulk Cement Supply</h3></b>
                             <p class="card-text">We offer high-quality cement in bulk for construction projects of all sizes. Our cement is sourced from reputable manufacturers and is ideal for use in residential, commercial, and industrial applications. We ensure timely delivery and competitive pricing</p>
@@ -333,7 +333,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card service-card">
-                        <img src="../html/images/service4.jpg" class="card-img-top" alt="Service 2">
+                        <img src="images/service4.jpg" class="card-img-top" alt="Service 2">
                         <div class="card-body">
                             <b><h3 class="card-title">Steel Rod Distribution</h3></b>
                             <p class="card-text">We provide a comprehensive range of steel rods, including TMT bars, for reinforcement in construction. Our steel rods are known for their strength and durability, making them suitable for various structural needs. We offer both bulk and customized orders to meet your project requirements.</p>
@@ -342,7 +342,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card service-card">
-                        <img src="../html/images/main2.jpg" class="card-img-top" alt="Service 3">
+                        <img src="images/main2.jpg" class="card-img-top" alt="Service 3">
                         <div class="card-body">
                            <b><h3 class="card-title">Chad Material Supply</h3></b> 
                             <p class="card-text">We specialize in supplying high-quality Chad materials used in construction and landscaping. Our Chad materials are ideal for creating stable foundations and enhancing the aesthetic appeal of outdoor spaces. We offer both small and large quantities to suit different project sizes.</p>
@@ -362,21 +362,21 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="../html/images/cr1.jpg" class="d-block w-100" alt="Product 1">
+                <img src="images/cr1.jpg" class="d-block w-100" alt="Product 1">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Product 1</h5>
                     <p>High quality and durability for all your construction needs.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../html/images/cr2.jpg" class="d-block w-100" alt="Product 2">
+                <img src="images/cr2.jpg" class="d-block w-100" alt="Product 2">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Product 2</h5>
                     <p>Affordable prices without compromising on quality.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="../html/images/cr3.jpg" class="d-block w-100" alt="Product 3">
+                <img src="images/cr3.jpg" class="d-block w-100" alt="Product 3">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Product 3</h5>
                     <p>Trusted by builders and contractors for years.</p>
@@ -407,21 +407,21 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="testimonial-card">
-                                    <img src="../html/images/profile1.jpg" alt="Client 1">
+                                    <img src="images/profile1.jpg" alt="Client 1">
                                     <p class="testimonial-text">"Excellent service and quality products. Highly recommend!"</p>
                                     <p class="testimonial-author"> rohit</p>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="testimonial-card">
-                                    <img src="../html/images/profile3.jpg" alt="Client 2">
+                                    <img src="html/images/profile3.jpg" alt="Client 2">
                                     <p class="testimonial-text">"Great value for money. Will definitely order again."</p>
                                     <p class="testimonial-author">rahul</p>
                                 </div>
                             </div>
                             <div class="swiper-slide">
                                 <div class="testimonial-card">
-                                    <img src="../html/images/profile4.jpg" alt="Client 3">
+                                    <img src="images/profile4.jpg" alt="Client 3">
                                     <p class="testimonial-text">"Fast delivery and top-notch quality. Very satisfied."</p>
                                     <p class="testimonial-author">sunny</p>
                                 </div>
